Grace/tests/gibbs/errors/t134.grace
// ERROR = P1002
var 7 := 8
